# aspen-toolbox

./: .gitignore  Cargo.toml  README.md  config.example
sh/: controller.sh  prompted_input.sh  script.ex
src/: main.rs
src/aspen_module/: cli.rs  config.rs  mod.rs
src/ssh_module/: command.rs  config.rs  mod.rs
