[package]
name = "aspen-toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "4.4.12"
colored = "2.1.0"
prettytable-rs = "^0.10"
ssh2 = "0.9.4"
dirs = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
